Fixed Gen Button

--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
 
+<link rel="stylesheet" href="style.css"/>
 </head>
 
 <body>
 
-This is a test. Another test
+<button id="generate">Generate URL</button>
 
-</body>
 <script type="text/javascript" src="user.js"></script>
+</body>
+
 </html>
