--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
 </head>
 
 <body>
+<div>
+</div>
 
-<button id="generate">Generate URL</button>
+<div>
+  <button id="generate">Generate URL</button>
+</div>
+
 
 <script type="text/javascript" src="user.js"></script>
 </body>
