--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
       input.addEventListener('input', () => {
         if (input.value) {
-          link.textContent = `http://google.com/${input.value}/customer`;
-          link.href = `http://google.com/${input.value}/customer`;
+          link.textContent = `https://www.myimarketslive.com/${input.value}/customer.html`;
+          link.href = `https://www.myimarketslive.com/${input.value}/customer.html`;
         } else {
           link.textContent = '';
         }
