--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       form.addEventListener('submit', function(e) {
         e.preventDefault();
-        window.location = `http://google.com/${input.value}/customer`;
+        window.location = `https://www.myimarketslive.co/${input.value}/customer.html`;
       });
     })();
     </script>
