--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <div>
     <form class="form">
-      <input class="input" type="text" placeholder="Username">
+      <input class="input" type="text" placeholder="IML Username">
       <input class="btn" type="submit" value="Go">
     </form>
+    </div>
+
+    <div>
+      <h1>Hold down link to Copy</h1>
+    </div>
     <a class="link"></a>
     <script>
     (function() {
@@ -32,5 +38,6 @@
       });
     })();
     </script>
+
   </body>
 </html>
