--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+
+    <div>
+      <h1>Generate your Custom IML Sign Up Link</h1>
+    </div>
     <div>
     <form class="form">
       <input class="input" type="text" placeholder="IML Username">
@@ -14,7 +18,7 @@
     </div>
 
     <div>
-      <h1>Hold down link to Copy</h1>
+      <h2>Hold down link to Copy</h2>
     </div>
     <a class="link"></a>
     <script>
