--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
 
     <div>
-      <h1>Generate your Custom IML Sign Up Link</h1>
+      <h1>Generate your IML Sign Up Link</h1>
     </div>
     <div>
     <form class="form">
